[package]
name = "poppulo-rest"
version = "0.1.0"
authors = ["Bazaah <github@luxolus.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.6.5"
serde = { version = "1.0.92", features = ["derive"] }
serde_json = "1.0.39"
rocket = "0.4.1"

[dependencies.rocket_contrib]
version = "0.4.1"
default-features = false
features = ["json"]